<resources>
    <string name="app_name">Fiznote</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_change_languahe">Язык</string>
    <string name="text_welcome">Добро пожаловать!</string>
    <string name="registred_hinttx_password">Пароль</string>
    <string name="registration_new_btn">Еще нет учетной записи!?\nЗарегистрируйся!</string>
    <string name="skip_auth_btn">Пропустить авторизацию</string>
    <string name="registration_txt">Регистрация</string>
    <string name="registred_hinttx_name">Имя</string>
    <string name="registred_hinttx_email">Электронная почта</string>
    <string name="registred_hinttx_numberphone">Номер телефона</string>
    <string name="registred_hinttx_confirm_password">Подтвердите пароль</string>
    <string name="enter_code">Введите код</string>
    <string name="registration_description_enter_code">Мы отправили письмо с кодом проверки на Вашу электронную почту</string>
    <string name="register_hint_code">_ _ _ _ _ _</string>
    <string name="please_wait">Пожалуйста подождите</string>
    <string name="enter_ex">Вход...</string>
    <string name="empty_notes">Здесь пустенько)</string>
    <string name="create_photo">Сфотографировать</string>
    <string name="notes_name">Заметки</string>
    <string name="settings_text_desc_email">Нажми, чтобы изменить адрес эл. почты</string>
    <string name="settings_change_name">Изменить имя</string>
    <string name="settings_add_profile_photo">Выбрать фото</string>
    <string name="settings_exit">Выход</string>
    <string name="settings_tv">Настройки</string>
    <string name="settingschange_name_desc">Нажмите, чтобы изменить</string>
</resources>