<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EnterCodeFragment">

    <TextView
        android:id="@+id/registred_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/century_gothic_bold"
        android:gravity="center"
        android:text="@string/enter_code"
        android:textColor="@color/black"
        android:textSize="@dimen/big_tx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/century_gothic_regular"
        android:gravity="center"
        android:text="@string/registration_description_enter_code"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registred_text"
        android:layout_marginTop="@dimen/vertical_margin"/>

    <EditText
        android:id="@+id/registered_edtxt_enter_code"
        android:layout_width="340dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_enter_code"
        android:textColor="@color/black"
        android:textSize="@dimen/code_size"
        android:maxLines="1"
        android:gravity="center"
        android:maxLength="6"
        android:hint="@string/register_hint_code"
        android:textColorHint="@color/grey_hint"
        android:fontFamily="@font/century_gothic_bold"
        android:background="@drawable/edit_text_register"
        android:inputType="number"
        android:layout_marginTop="@dimen/vertical_Large_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>